2021/01/18 16:10の処でコミットします

--- a/QBCodePay.csproj
+++ b/QBCodePay.csproj
@@ -67,8 +67,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="QBCodePay.resx">
+      <DependentUpon>QBCodePay.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
-    <None Include="post.json" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
