2021/01/18の最終でお願いします。

--- a/QBCodePay.csproj
+++ b/QBCodePay.csproj
@@ -70,6 +70,7 @@
     <EmbeddedResource Include="QBCodePay.resx">
       <DependentUpon>QBCodePay.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Config.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
