--- a/QBCodePay.csproj
+++ b/QBCodePay.csproj
@@ -70,7 +70,9 @@
     <EmbeddedResource Include="QBCodePay.resx">
       <DependentUpon>QBCodePay.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="Config.json" />
+    <None Include="Config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
